@@ -6,4 +6,3 @@ lib/Tie/Pick.pm
 t/000_tests.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
