@@ -1,3 +1,6 @@
+Version
++ Remove Kwalitee tests
+
 Version 2009110701
 + Modernized Makefile.PL
 + Fix prerequisites.
